<resources>
    <string name="app_name">Alerta Covid-19</string>
    <string name="titulo_splash">Alerta Covid-19</string>
    <string name="splash_mensaje">Conciencia, aislamiento del hogar y consejos de salud</string>
    <string name="retry">Retry</string>
    <string name="confirmed_total">Confirmados\ntotales</string>
    <string name="death_total">Bajas\ntotales</string>
    <string name="recovered_total">Recuperados\ntotales</string>
    <string name="home_bottom_dialog_title">Coronavirus COVID-19 Casos Globales</string>
    <string name="search_hint">Buscar…</string>
    <string name="menu_global_cases">Casos Globales</string>
    <string name="symptoms">Sintomas</string>
    <string name="fever">Fiebre</string>
    <string name="cough">Tos Seca</string>
    <string name="sore_throat">Dolor de garganta</string>
    <string name="runny_nose">Secreciones nasales</string>
    <string name="difficulty_breathing">Dificultad para respirar</string>
    <string name="scare_virus">Informate sobre los síntomas del Coronavirus</string>
    <string name="consult_message">Tome sus precauciones y no ignore los síntomas. Consulte cuales son los síntomas hoy mismo.</string>
    <string name="know_more">Saber mas</string>
    <string name="menu_symptoms">Síntomas</string>
    <string name="symptoms_title_1">¿Qué es la COVID-19?</string>
    <string name="symptoms_desc_1">La COVID-19 es la enfermedad infecciosa causada por el coronavirus que se ha descubierto más recientemente. Tanto el nuevo virus como la enfermedad eran desconocidos antes de que estallara el brote en Wuhan (China) en diciembre de 2019.</string>
    <string name="symptoms_title_2">¿Cuáles son los síntomas de la COVID-19?</string>
    <string name="symptoms_desc_2">Los síntomas más comunes de la COVID-19 son fiebre, cansancio y tos seca. Algunos pacientes pueden presentar dolores, congestión nasal, rinorrea, dolor de garganta o diarrea. Estos síntomas suelen ser leves y aparecen de forma gradual. Algunas personas se infectan pero no desarrollan ningún síntoma y no se encuentran mal. La mayoría de las personas (alrededor del 80%) se recupera de la enfermedad sin necesidad de realizar ningún tratamiento especial. Alrededor de 1 de cada 6 personas que contraen la COVID-19 desarrolla una enfermedad grave y tiene dificultad para respirar. Las personas mayores y las que padecen afecciones médicas subyacentes, como hipertensión arterial, problemas cardiacos o diabetes, tienen más probabilidades de desarrollar una enfermedad grave. En torno al 2% de las personas que han contraído la enfermedad han muerto. Las personas que tengan fiebre, tos y dificultad para respirar deben buscar atención médica.</string>
    <string name="symptoms_title_3">¿Sospecha que usted o alguien cercano a usted puede estar contagiado(a)?</string>
    <string name="menu_emergency_guide">Guía de emergencia</string>
    <string name="scare_emergency">Evita el contagio del Coronavirus</string>
    <string name="scare_emergency_message">Si sospecha que esta contagiado(a) o alguien cercano a usted, consulte cuales son las medidas correspondientes a tomar.</string>
    <string name="emergency_head">Evita el contagio del Coronavirus</string>
    <string name="emergency_title_1">¿Cómo se propaga la COVID-19?</string>
    <string name="emergency_desc_1">Una persona puede contraer la COVID-19 por contacto con otra que esté infectada por el virus. La enfermedad puede propagarse de persona a persona a través de las gotículas procedentes de la nariz o la boca que salen despedidas cuando una persona infectada tose o exhala. Estas gotículas caen sobre los objetos y superficies que rodean a la persona, de modo que otras personas pueden contraer la COVID-19 si tocan estos objetos o superficies y luego se tocan los ojos, la nariz o la boca. También pueden contagiarse si inhalan las gotículas que haya esparcido una persona con COVID-19 al toser o exhalar. Por eso es importante mantenerse a más de 1 metro (3 pies) de distancia de una persona que se encuentre enferma.La OMS está estudiando las investigaciones en curso sobre las formas de propagación de la COVID-19 y seguirá informando sobre los resultados actualizados.</string>
    <string name="emergency_title_2">¿Puede transmitirse a través del aire el virus causante de la COVID-19?</string>
    <string name="emergency_desc_2">Los estudios realizados hasta la fecha apuntan a que el virus causante de la COVID-19 se transmite principalmente por contacto con gotículas respiratorias, más que por el aire.</string>
    <string name="emergency_title_3">¿Es posible contagiarse de COVID-19 por contacto con una persona que no presente ningún síntoma?</string>
    <string name="emergency_desc_3">La principal forma de propagación de la enfermedad es a través de las gotículas respiratorias expelidas por alguien al toser. El riesgo de contraer la COVID-19 de alguien que no presente ningún síntoma es muy bajo. Sin embargo, muchas personas que contraen la COVID-19 solo presentan síntomas leves. Esto es particularmente cierto en las primeras etapas de la enfermedad.</string>
    <string name="emergency_title_4">¿Qué puedo hacer para protegerme y prevenir la propagación de la enfermedad?</string>
    <string name="emergency_desc_4">Manténgase al día de la información más reciente sobre el brote de COVID-19, a la que puede acceder en el sitio web de la OMS y a través de las autoridades de salud pública pertinentes a nivel nacional y local. Se han registrado casos en muchos países de todo el mundo, y en varios de ellos se han producido brotes. Las autoridades chinas y las de otros países han conseguido enlentecer o detener el avance de los brotes, pero la situación es impredecible y es necesario comprobar con regularidad las noticias más recientes.</string>
    <string name="emergency_prevent_1">Lávese las manos a fondo y con frecuencia usando un desinfectante a base de alcohol o con agua y jabón.</string>
    <string name="emergency_prevent_2">Mantenga una distancia mínima de 1 metro (3 pies) entre usted y cualquier persona que tosa o estornude.</string>
    <string name="emergency_prevent_3">Evite tocarse los ojos, la nariz y la boca</string>
    <string name="emergency_prevent_4">Tanto usted como las personas que les rodean deben asegurarse de mantener una buena higiene de las vías respiratorias. Eso significa cubrirse la boca y la nariz con el codo doblado o con un pañuelo de papel al toser o estornudar. El pañuelo usado debe desecharse de inmediato.</string>
    <string name="emergency_prevent_5">Permanezca en casa si no se encuentra bien. Si tiene fiebre, tos y dificultad para respirar, busque atención médica y llame con antelación. Siga las instrucciones de las autoridades sanitarias locales.</string>
    <string name="stagesOfCovid">Etapas de COVID-19</string>
    <string name="Precauciones">Precauciones</string>
    <string name="Stage1">Etapa 1: Comprender con el ejemplo de Ankur</string>
    <string name="stage1_descp">En medio de los temores de Corona, Ankur llegó a su casa de Londres a la India. No tenía fiebre en el aeropuerto. Se le permitió irse a casa. Pero le dieron una declaración jurada en el aeropuerto que lo encarcelarían en su casa durante 14 días. Y cuando llegue la fiebre, se comunicará con este número. Después de irse a casa, cumplió con las condiciones de la declaración jurada. Fue encarcelado en la casa. Incluso mantuvo distancia de los miembros de la casa. Ankurki Mummy dijo: no te pasó nada. No te quedes aislado. Después de tantos días, obtendrá la comida de la casa, en la cocina, sirvo comida caliente y caliente. Esta vez, Ankur se enojó. Le gritó a mamá. Las lágrimas se derramaron en el ojo de la momia. Vebura estuvo de acuerdo.
        Los brotes continúan siendo los más aislados (aislados).
        En el día 6-7, los brotes comenzaron a tener síntomas como fiebre, tos fría. Llamó a la línea de ayuda. Se realizó la prueba de corona. Resultó positivo. Los miembros de su familia también fueron evaluados. Todos resultaron ser negativos. El área de un km fue la más cuestionada. Todos fueron probados.
        Todos dijeron que nadie vio a Ankur saliendo de la casa. Como se había aislado bien, no extendió la corona a nadie más. Ankurki era más joven. Los síntomas de la corona fueron muy leves. Solo se produjo fiebre, resfriado, tos, dolor corporal, etc. Después de 7 días de tratamiento, se recuperó por completo y regresó a casa después de ser dado de alta del hospital. La madre, que se había sentido mal ayer, agradece hoy que no haya corona en toda la casa.
        \ n \ nConclusión: esta es la primera etapa en la que la corona es solo en un hombre del extranjero. No se lo dio a nadie más.
    </string>
    <string name="Stage2"> Etapa 2- Comprende el ejemplo de Aniket que se convirtió en Corona positivo por error de otro </string>
    <string name="stage2_descp"> Aniket, que vive en Mumbai, tenía fiebre y tos. El oficial de salud tomó toda la información de Aniket sobre sus últimos días. Esa información mostró que no fue al extranjero. Pero ha entrado en contacto con una persona que recientemente ha venido al extranjero. Fue a una joyería para comprar joyas anteayer. Su jefe Sethji había regresado recientemente de Italia.
        Sethji vino del extranjero. No tenía fiebre en el aeropuerto. Por eso se le permitió irse a casa. Pero su declaración jurada se hizo para llenar, que permanecería completamente solo durante los próximos 14 días y no saldría de la casa. También se mantendrá alejado de los miembros de la familia.
        Pero, en la búsqueda de ganancias, ondeó la bandera de esa declaración jurada llena en el aeropuerto. En casa, se encontró con el mayor amor, tocó a otros y se dejó tocar. Come tu verdura favorita por la noche y ve a tu joyería al día siguiente.
        Al sexto día, Sethji tuvo fiebre. Su familia también tuvo fiebre. La vieja madre también estaba entre los miembros de la familia. Todo salió positivo en la investigación. El hombre que vino del extranjero se puso positivo, luego también hizo que los compañeros de casa fueran positivos. En Sethjidukan, 450 personas entraron en contacto, como sirvientes, clientes, etc.
        Uno de ellos fue Aniket Bhitha.
        Ahora: aislando a las 450 personas. Es una segunda etapa, incluso si hay algo positivo en ellos.
        ¡El temor es que no todas estas 450 personas sepan a dónde han ido, cuántas personas deben haber conocido!
        \ n \ nConclusión: la etapa general 2 significa que el hombre que ha obtenido una corona positiva no se fue al extranjero. Pero se ha puesto en contacto con una persona que recientemente ha venido al extranjero. </string>
    <string name="Stage3"> Etapa 3: Comprenda el ejemplo de Ankita, ¿quién no sabía cómo se infectó? </string>
    <string name="required"> * Obligatorio </string>
    <string name="diagnostico">AutoDiagnostico</string>
    <string name="reportar_caso">Reportar Casos</string>
    <string name="donaciones">Reportar Donaciones</string>
    <string name="donationstitle"> Necesitamos su ayuda. Ayuda a otros donando lo que puedas </string>
    <string name="forqueirs"> Para cualquier consulta, póngase en contacto con significado +51 928 188 705 </string>
    <string name="selectoption"> Seleccione la opción que desea donar <font fgcolor='# ffff4444'> * </font> </string>
    <string name="selectfoodq"> Seleccione la calidad de los alimentos </string>
    <string name="address"> Direccion </string>
    <string name="yourname">Tú nombre</string>
    <string name="feedback_send">Enviar</string>
    <string name="quantity">Cantidad</string>
    <string name="GuiaEmergencia"> Guia de emergencia </string>
</resources>