<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ede7f6"
    tools:context=".Activity.DonacionActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/donaciones"
            app:titleTextAppearance="@style/ToolbarTextAppearance"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            app:layout_constraintTop_toBottomOf="@+id/appBar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ede7f6"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/c1"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:src="@drawable/donaciones_banner"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">
                </ImageView>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_below="@+id/c1"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:id="@+id/c2"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:clipToPadding="true"
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimary"
                    android:layout_height="8dp"
                    android:orientation="vertical">
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/quicksand_semibold"
                        android:textSize="18dp"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donationstitle" />
                    <TextView
                        android:id="@+id/callforquery"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forqueirs" />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:textColor="@android:color/holo_red_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/required" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/c3"
                android:layout_below="@+id/c2"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selectoption" />

                    <Spinner
                        android:layout_marginStart="9dp"
                        android:layout_marginEnd="9dp"
                        android:id="@+id/donationspinner"
                        android:layout_marginTop="6dp"
                        android:dropDownWidth="match_parent"
                        android:spinnerMode="dialog"
                        android:fontFamily="@font/quicksand_medium"
                        android:layout_width="match_parent"
                        android:layout_height="45dp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/foodlay"
                android:layout_below="@+id/c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/c4"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:fontFamily="@font/quicksand_medium"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selectfoodq" />

                        <Spinner
                            android:layout_marginStart="9dp"
                            android:layout_marginEnd="9dp"
                            android:id="@+id/foodqspinner"
                            android:layout_marginTop="6dp"
                            android:dropDownWidth="match_parent"
                            android:spinnerMode="dialog"
                            android:fontFamily="@font/quicksand_medium"
                            android:layout_width="match_parent"
                            android:layout_height="45dp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:fontFamily="@font/quicksand_medium"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity" />

                        <EditText
                            app:hintAnimationEnabled="true"
                            android:layout_marginTop="6dp"
                            android:id="@+id/foodqtext"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@null"
                            android:fontFamily="@font/quicksand_medium"
                            android:hint="Escriba aquí"
                            android:inputType="numberDecimal"
                            app:hintEnabled="true"
                            android:textColorHint="@color/gray"
                            android:textColor="@android:color/black"
                            android:textSize="15dp">
                        </EditText>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:fontFamily="@font/quicksand_medium"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address" />

                        <EditText
                            app:hintAnimationEnabled="true"
                            android:layout_marginTop="6dp"
                            android:id="@+id/addtext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="45dp"
                            android:background="@null"
                            android:fontFamily="@font/quicksand_medium"
                            android:hint="Escriba aquí"
                            app:hintEnabled="true"
                            android:textColorHint="@color/gray"
                            android:inputType="textMultiLine"
                            android:textColor="@android:color/black"
                            android:textSize="15dp">
                        </EditText>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:fontFamily="@font/quicksand_medium"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yourname" />

                        <EditText
                            app:hintAnimationEnabled="true"
                            android:layout_marginTop="6dp"
                            android:id="@+id/donorname"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@null"
                            android:fontFamily="@font/quicksand_medium"
                            android:hint="Escriba aquí"
                            app:hintEnabled="true"
                            android:textColorHint="@color/gray"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="15dp">
                        </EditText>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <Button
                    android:layout_below="@+id/c4"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/fooddsendButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:textColor="#ffffff"
                    android:text="@string/feedback_send"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/redAccent"
                    app:cornerRadius="6dp" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>
